--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,6 +15,15 @@
 </head>
 
 <body class="font-['helvetica_now_display']">
-    <nav class="w-full fixed top-0 left-0 px-5 py-3">
-        <h3 class="text-xl">Scatch</h3>
+    <nav class="w-full flex justify-between px-5 py-3">
+        <a href="/shop"><h3 class="text-xl">Scatch</h3></a>
+        <% var loggedin = typeof loggedin !== "undefined" ? loggedin : true %>
+        <% if(loggedin) { %>
+        <div class="flex gap-5">
+            <a href="/shop">Shop</a>
+            <a href="/cart">Cart</a>
+            <a href="/accout">My Account</a>
+            <a href="/logout" class="text-red-600">Logout</a>
+        </div>
+        <% } %>
     </nav>
